src/production-css/salarypayfrequency.production.css
/* ... */
/*Media 820px */
@media (max-width: 820px) {
  #success-form {
    margin-left: 70px;
    height: 620px;
    margin-top: -45px;
    width: 600px;
  }
  .chart-container {
    margin-left: 75px;
    position: relative;
    bottom: 50px;
    height: 100vh;
    width: 55vw;
  }

  #graph-logo {
    margin-left: -20px;
    margin-top: -25px;
    padding: 2px;
    position: relative;
    bottom: 65px;
  }

  h1 {
    position: relative;
    bottom: 15px;
    font-size: 20px;
    padding: 10px;
  }

  #results-printed {
    position: relative;
    bottom: 35px;
    right: 0px;
  }

  .pay-break {
    margin-top: -265px;
  }
}

/*Media 768px */

@media (max-width: 768px) {
  #success-form {
    margin-left: 40px;
    height: 620px;
    margin-top: -45px;
    width: 600px;
  }
  .chart-container {
    margin-left: 90px;
    position: relative;
    bottom: 50px;
    height: 100vh;
    width: 55vw;
  }

  #graph-logo {
    margin-left: -10px;
    margin-top: -25px;
    padding: 2px;
    position: relative;
    bottom: 65px;
  }

  h1 {
    position: relative;
    bottom: 15px;
    font-size: 20px;
    padding: 10px;
  }

  #results-printed {
    position: relative;
    bottom: 35px;
    right: 0px;
  }

  .pay-break {
    margin-top: -130px;
  }
}

/* Media 540px */

@media (max-width: 540px) {
  #success-form {
    margin-left: 60px;
    height: 620px;
    margin-top: -45px;
    width: 350px;
  }
  .chart-container {
    margin-left: -10px;
    position: relative;
    bottom: 50px;
    height: 100vh;
    width: 70vw;
  }

  #graph-logo {
    margin-left: -10px;
    margin-top: -25px;
    padding: 2px;
    position: relative;
    bottom: 65px;
  }

  h1 {
    position: relative;
    bottom: 15px;
    font-size: 20px;
    padding: 10px;
  }

  #results-printed {
    position: relative;
    bottom: 35px;
    right: 0px;
  }

  .pay-break {
    margin-top: 110px;
  }
}

/*Media 480px */

@media (max-width: 480px) {
  body {
    height: 770px;
  }

  html {
    overflow-x: hidden;
    overflow-y: auto;
  }

  .section-div {
    height: 745px;
  }

  .logo {
    margin-left: -50px;
    position: relative;
    bottom: 10px;
  }
  .chart-container {
    margin-left: -50px;
    position: relative;
    bottom: 50px;
    height: 100vh;
    width: 90vw;
  }

  #graph-logo {
    margin-left: -65px;
    margin-top: -25px;
    padding: 2px;
    position: relative;
    bottom: 65px;
  }

  #success-form {
    margin-left: 12px;
    height: 645px;
    margin-top: -45px;
    width: 340px;
  }

  h1 {
    position: relative;
    bottom: 15px;
    font-size: 20px;
    padding: 10px;
  }

  #results-printed {
    position: relative;
    bottom: 35px;
    right: 0px;
  }

  .pay-break {
    margin-top: 19px;
  }
}

/*Media 430 */

@media (max-width: 430px) {
  .logo {
    margin-left: -95px;
  }
  #graph-logo {
    margin-left: -78px;
    margin-top: -25px;
    padding: 2px;
    position: relative;
    bottom: 65px;
  }
  #success-form {
    margin-left: 3px;
    height: 645px;
    margin-top: -45px;
    width: 320px;
  }
  .chart-container {
    margin-left: -32px;
    position: relative;
    bottom: 50px;
    height: 100vh;
    width: 90vw;
  }
}

/*Media 414px */

@media (max-width: 414px) {
  .logo {
    margin-left: -90px;
  }
  img {
    min-width: 480px;
    height: auto;
  }

  .chart-container {
    margin-left: -50px;
    position: relative;
    bottom: 50px;
    height: 100vh;
    width: 90vw;
  }

  #graph-logo {
    margin-left: -80px;
    margin-top: -25px;
    padding: 2px;
    position: relative;
    bottom: 65px;
  }

  #success-form {
    margin-left: 18px;
    height: 645px;
    margin-top: -45px;
    width: 280px;
  }

  h1 {
    position: relative;
    bottom: 15px;
    font-size: 20px;
    padding: 10px;
  }

  #results-printed {
    position: relative;
    bottom: 35px;
    right: 0px;
  }
}

/*Media 393px */

@media (max-width: 393px) {
  #success-form {
    width: 295px;
    margin-left: 18px;
  }

  .logo {
    margin-left: -85px;
  }

  .pay-break {
    margin-top: 52px;
  }
}

/*Media 375px */

@media (max-width: 375px) {
  img {
    min-width: 415px;
  }

  .logo {
    margin-left: -70px;
    position: relative;
    bottom: 10px;
  }

  .chart-container {
    margin-left: -72px;
    position: relative;
    bottom: 50px;
    height: 100vh;
    width: 100vw;
  }

  #graph-logo {
    margin-left: -65px;
    margin-top: -8px;
    padding: 2px;
    position: relative;
    bottom: 65px;
  }

  #success-form {
    margin-left: 5px;
    height: 665px;
    margin-top: -25px;
    width: 260px;
  }

  h1 {
    position: relative;
    bottom: 15px;
    font-size: 20px;
    padding: 5px;
  }

  #results-printed {
    position: relative;
    bottom: 35px;
    right: 10px;
  }

  #pay-form {
    position: relative;
    left: -0px;
    top: -230px;
  }
  .pay-break {
    margin-top: 183px;
  }
}
/* ... */

